<resources>
    <string name="app_name">Ecole privée Françoise DOLTO</string>
    <string name="ecole_privee">Ecole Privée</string>
    <string name="francois_dolto">Françoise DOLTO</string>
    <string name="saint_quentin_fallavier">Saint - Quentin - Fallavier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_first_page">News</string>
    <string name="navigation_drawer_administrator">ADMINISTRATEUR</string>
    <string name="navigation_drawer_classrooms">Création classes</string>
    <string name="navigation_drawer_policy">Privacy Policy</string>
    <string name="navigation_drawer_cake_friday">Planning des goûters</string>
    <string name="navigation_drawer_news_creator">Création News</string>
    <string name="navigation_drawer_event_creator">Création Evènements</string>
    <string name="navigation_drawer_event">Evènements</string>
    <string name="navigation_drawer_stage_creator">Création Ateliers</string>
    <string name="event_event">EVENEMENTS</string>
    <string name="event_event_single">EVENEMENT</string>
    <string name="event_file_stage_volunteer">ATELIERS DES BENEVOLES</string>
    <string name="event_file_stage_text_btn">Je participe !</string>
    <string name="event_file_stage_needs">TABLEAU DES BESOINS</string>
    <string name="event_file_email_subject">Planning</string>
    <string name="event_file_email_message">Envoie du planning de l\'événement : </string>
    <string name="event_file_other_participation">Vous participez déjà à un autre atelier pendant cette plage horaire</string>
    <string name="event_creator_event_menu">MENU EVENEMENTS</string>
    <string name="event_creator_event">EDITEUR EVENEMENT</string>
    <string name="event_creator_panel">PANEL</string>
    <string name="event_creator_title">TITRE</string>
    <string name="event_creator_logo">LOGO</string>
    <string name="event_creator_date">DATE</string>
    <string name="event_creator_description">DESCRIPTION</string>
    <string name="event_creator_tab_one">PRESENTATION</string>
    <string name="event_creator_tab_two">ATELIER</string>
    <string name="event_creator_tab_three">BESOINS</string>
    <string name="event_creator_save">ENREGISTRER</string>
    <string name="event_creator_maj">METTRE A JOUR</string>
    <string name="event_creator_incomplet">EVENEMENT INCOMPLET</string>
    <string name="event_creator_event_published">Publication évènement effectuée</string>
    <string name="event_creator_event_not_published">Publication évènement enlevée</string>
    <string name="event_creator_stages_link">Stages attachés à l\'évènement</string>
    <string name="stage_creator_stage_menu">MENU STAGES</string>
    <string name="stage_creator_stage">EDITEUR STAGE</string>
    <string name="stage_creator_title">TITRE :</string>
    <string name="stage_creator_photo">PHOTO :</string>
    <string name="stage_creator_people">Nombre requis de personnes par plages horaires</string>
    <string name="stage_creator_schedules_title">PLAGES HORAIRES :</string>
    <string name="stage_creator_schedules_start_btn">DEBUT</string>
    <string name="stage_creator_schedules_end_btn">FIN</string>
    <string name="stage_creator_schedules_scale">HH:mm / HH:mm</string>
    <string name="stage_creator_places">PLACES</string>
    <string name="stage_creator_stage_incomplet">STAGE INCOMPLET</string>
    <string name="stage_creator_stage_enregistre">ENREGISTREMENT STAGE</string>
    <string name="news_creator_label">NEWS EDITEUR</string>
    <string name="news_creator_date_title">DATE :</string>
    <string name="news_creator_publication_title">PUBLICATION :</string>
    <string name="news_creator_add_text"> : Ajouter un nouvel évènement</string>
    <string name="news_creator_news_file">Fichier NEWS</string>
    <string name="news_creator_news_body">CONTENU :</string>
    <string name="news_creator_news_logo">LOGO :</string>
    <string name="news_creator_photo_telephone">TELEPHONE</string>
    <string name="news_creator_photo_backend">SERVEUR</string>
    <string name="news_creator_add_btn_maj">MAJ</string>
    <string name="notification_text_parameter">Notification Francoise Dolto</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>
    <string name="formulary_formulary">Formulaire</string>
    <string name="formulary_class">CLASSE</string>
    <string name="formulary_introduction">Renseigner l\'identité de votre/vos enfant(s).</string>
    <string name="formulary_add_kid">+ : ajouter le profil d\'un enfant</string>
    <string name="formulary_valider">VALIDER</string>
    <string name="formulary_classroom_default_btn">CHOISIR</string>
    <string name="formulary_snackbar_incomplet">Formulaire incomplet, vérifiez pour chaque enfant :\n\n     * genre : garçon ou fille\n     * nom\n     * prénom\n     * classe</string>
    <string name="connexion_deconnexion">Deconnexion</string>
    <string name="connexion_btn">SE CONNECTER</string>
    <string name="connexion_presentation_btn">PRESENTATION DE L\'ECOLE</string>
    <string name="connexion_contact_btn">CONTACT</string>
    <string name="connection_succeed">Connexion réussie</string>
    <string name="error_authentication_canceled">Connexion annulée</string>
    <string name="error_no_internet">Connexion serveur impossible</string>
    <string name="error_unknown_error">Erreur</string>
    <string name="compte_deconnexion">DECONNEXION</string>
    <string name="compte_delete">Supprimer compte</string>
    <string name="popup_message_confirmation_delete_account">Souhaitez vous supprimer votre compte</string>
    <string name="popup_message_choice_yes">OUI</string>
    <string name="popup_message_choice_no">NON</string>
    <string name="password_bienvenue">BIENVENUE !</string>
    <string name="password_intro">Vous souhaitez vous inscrire avec les identifiants suivants :</string>
    <string name="password_activity_request">Veuillez entrer le code fourni par l\'APEL</string>
    <string name="password_ps1">(vous pourrez les modifier dans le formulaire d\'inscription)</string>
    <string name="password_mot_de_passe">Mot de passe</string>
    <string name="password_wrong_proposition">Code erroné, veuillez réessayer. Le code se trouve sur le document de l\'APEL. Si le problème persiste, contactez l\'APEL dans notre rubrique contact.</string>
    <string name="contact_destinataire">DESTINATAIRE :</string>
    <string name="contact_email">Adresse messagerie :</string>
    <string name="contact_email_save">Garder en mémoire votre adresse email</string>
    <string name="contact_titre">TITRE :</string>
    <string name="contact_message">MESSAGE</string>
    <string name="contact_APEL">APEL</string>
    <string name="contact_ECOLE">ECOLE</string>
    <string name="contact_DEVELOPPEUR">DEVELOPPEUR (version test)</string>
    <string name="contact_OGEC">OGEC</string>
    <string name="presentation_line_empty">LINE EMPTY</string>
    <string name="presentation_historique_titre">HISTORIQUE</string>
    <string name="presentation_historique_l1">L\'école est née de la donation en 1905, d\’un couple de Saint-Quentinois, Monsieur et Madame Guerin, au diocèse de Grenoble pour que leur demeure devienne un lieu de savoir pour de jeunes enfants.</string>
    <string name="presentation_historique_l2">Cette bâtisse est plus que centenaire. Elle a subi des réfections au cours des années. Beaucoup de passagers lambda passent devant chaque jour sans savoir que derrière ces murs, une équipe travaille à l\'enseignement de jeunes enfants, à leur construction intellectuelle et sociale.</string>
    <string name="presentation_historique_l3">Il y a une vingtaine d\'année, l\'école change de nom. Elle passe d\'Ecole Privée Catholique à Ecole Privée Françoise Dolto.</string>
    <string name="presentation_historique_l4">Ce choix n\'a pas été neutre, l\'enseignement donné et la place centrale de l\'enfant en son sein étant en totale adéquation avec les travaux de la célèbre psychanalyste.</string>
    <string name="presentation_historique_l5">Aujourd\'hui cette école jouie d\'une très bonne réputation. Elle est composée de deux classes de maternelles et de quatre classes de primaires.</string>
    <string name="presentation_historique_l6">L\'école est située en plein cœur de la commune de Saint-Quentin-Fallavier en Isère.</string>
    <string name="presentation_projet_titre">PROJET EDUCATIF</string>
    <string name="presentation_projet_l1">L\'enseignement privé catholique est né de la volonté de l\'Eglise et des chrétiens d\'éduquer les enfants selon certaines valeurs, et notamment celles exprimées par l\'Evangile.</string>
    <string name="presentation_projet_l2">Outre un enseignement de qualité, l\'Ecole Privée Françoise Dolto accorde une grande place à l\'éducation, à la relation entre les générations et au respect d\'autrui et prépare ainsi les enfants à leur vie d\'hommes et de femmes responsables.</string>
    <string name="presentation_projet_l3">Le climat familial qu\'elle entretient permet ainsi à l\'enfant de se sentir aimé et reconnu, soutenu et écouté.</string>
    <string name="presentation_projet_l4">L\'éducation est basée sur : </string>
    <string name="presentation_projet_l5">•	La sensibilité</string>
    <string name="presentation_projet_l6">•	La liberté pour que chaque enfant puisse prendre ses propres décisions</string>
    <string name="presentation_projet_l7">•	La responsabilité</string>
    <string name="presentation_projet_l8">•	La discipline et le respect des autres, au travers du travail en commun, de l\'entraide, de l\'échange, de l\'amitié</string>
    <string name="presentation_projet_l9">•	L\'émulation et non la compétition.</string>
    <string name="presentation_reglement_titre">CHARTE DE BONNE CONDUITE</string>
    <string name="presentation_reglement_l1">L\'inscription d\'un élève à l\'école Françoise Dolto nécessite la pleine adhésion des parents au projet éducatif et pédagogique.</string>
    <string name="presentation_reglement_l2">Le contrat de scolarisation est fondé sur la confiance que les parents ont dans la qualité de l\'enseignement dispensé et de l\'équipe pédagogique.</string>
    <string name="presentation_reglement_l3">Les enseignants et le chef d\'établissement sont à l\'écoute de tous, dans le souci du respect de chacun, d\'ouverture et de tolérance et cela pour apporter le meilleur service aux enfants qui leur sont confiés.</string>
    <string name="presentation_reglement_l4">Quelle que soit la nature des problèmes rencontrés, les parents comme les élèves doivent toujours conserver une attitude courtoise et respectueuse vis à vis des personnels de l\'établissement.</string>
    <string name="presentation_reglement_l5">Aucune forme d\'agressivité et de vulgarité ne sera tolérée au sein de l\'établissement, encore moins en présence des enfants.</string>
    <string name="presentation_reglement_l6">Tout comportement contraire à ces principes pourra entraîner la rupture du contrat de scolarisation.</string>
    <string name="presentation_reglement_l7">Pour l\'épanouissement de chaque enfant dans une atmosphère de travail positive, et afin de mener à bien notre mission, il est donc nécessaire de respecter ces principes.</string>
    <string name="presentation_pastorale_titre">PASTORALE</string>
    <string name="presentation_pastorale_l1">L\'école privée Françoise DOLTO est une école dont les fondements sont enracinés dans la foi chrétienne.</string>
    <string name="NAME">NOM</string>
    <string name="EMAIL">EMAIL</string>
    <string name="OK">OK</string>
    <string name="RETOUR">RETOUR</string>
    <string name="AJOUTER">AJOUTER</string>
    <string name="SUPPRIMER">SUPPRIMER</string>
</resources>