<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/general_drawer_formulary"
            android:icon="@drawable/ic_folder_shared_black_24dp"
            android:title="@string/formulary_formulary"/>
        <item
            android:id="@+id/general_drawer_deconnexion"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/connexion_deconnexion"/>
        <item
            android:id="@+id/general_drawer_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/compte_delete"/>
        <item
            android:id="@+id/general_drawer_policy"
            android:icon="@drawable/ic_reply_white_24dp"
            android:title="@string/navigation_drawer_policy"/>
    </group>

    <item
        android:id="@+id/genaral_drawer_admin_section"
        android:title="@string/navigation_drawer_administrator">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/classromms_edition"
                    android:icon="@drawable/ic_group_black_24dp"
                    android:title="@string/navigation_drawer_classrooms"/>
            </group>
        </menu>
    </item>

</menu>