<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/main_horizontal_guide"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_guide"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_left_guide"
        app:layout_constraintTop_toTopOf="parent" />
    
    <android.support.constraint.Guideline
        android:id="@+id/main_vertical_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1"/>

    <android.support.constraint.Guideline
        android:id="@+id/main_vertical_left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <android.support.constraint.Guideline
        android:id="@+id/main_horizontal_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"/>

    <TextView
        android:id="@+id/main_text_ecole_privee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/ecole_privee"
        android:fontFamily="@font/roboto_bold"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo_animation"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guide"
        app:layout_constraintTop_toTopOf="@+id/logo_animation" />

    <TextView
        android:id="@+id/main_text_Francoise_dolto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/francois_dolto"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_left_guide"
        app:layout_constraintTop_toBottomOf="@+id/logo_animation" />

    <TextView
        android:id="@+id/main_text_saint_quentin_fallavier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/saint_quentin_fallavier"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_left_guide"
        app:layout_constraintTop_toBottomOf="@+id/main_text_Francoise_dolto" />

    <Button
        android:id="@+id/main_connexion_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/connexion_btn"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>